fix touch controls

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <head>
+
 </head>
 <body>
-    <canvas id='myCanvas'></canvas>
+    <canvas id='myCanvas' style="touch-action: none;"></canvas>
 </body>
 
 <!-- load our scripts -->
